--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -1,1 +1,12 @@
-detail
+{% extends "_base.html" %}
+
+{% block title %}
+    Detail {{ product.title }}
+{% endblock %}
+
+{% block content %}
+    <h1>{{ product.title }}</h1>
+    <p>{{ product.description }}</p>
+    <h4>{{ product.datetime_created }}</h4>
+
+{% endblock %}
