--- a/shop/templates/shop/product_create.html
+++ b/shop/templates/shop/product_create.html
@@ -1,1 +1,15 @@
-create
+{% extends "_base.html" %}
+
+{% block title %}
+    Create
+{% endblock %}
+
+{% block content %}
+
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Create</button>
+    </form>
+
+{% endblock %}
