--- a/shop/templates/shop/product_update.html
+++ b/shop/templates/shop/product_update.html
@@ -1,1 +1,15 @@
-update
+{% extends "_base.html" %}
+
+{% block title %}
+    Update {{ product.title }}
+{% endblock %}
+
+{% block content %}
+
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Change</button>
+    </form>
+
+{% endblock %}
