--- a/shop/templates/shop/product_delete.html
+++ b/shop/templates/shop/product_delete.html
@@ -1,14 +1,16 @@
-{% extends "_base.html" %}
+{% extends '_base.html' %}
 
 {% block title %}
-    Delete {{ product.title }}
+    حذف کتاب{{ products.title }}
 {% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
-        <h1>Do you want to Delete {{ product.title }}???</h1>
-    {#    <input type="submit" value="Yes Delete.">#}
-        <button type="submit">Yes Delete.</button>
+        <h1>حذف کتاب {{ products.title }}</h1>
+        <p>آیا از حذف کردن کتاب {{ products.title }} مطمين هستید؟</p>
+        <input type="submit" class="btn btn-danger" value="بله مطمينم">
     </form>
-{% endblock %}
+    <br>
+    <a href="{% url 'product_list' %}">برگشت</a>
+{% endblock content %}
