--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -1,12 +1,88 @@
-{% extends "_base.html" %}
+{% extends '_base.html' %}
+
+{#{% load book_tags %}#}
+
+{% load crispy_forms_tags %}
 
 {% block title %}
-    Detail {{ product.title }}
+    جزییات کتاب {{ products.title }}
 {% endblock %}
 
 {% block content %}
-    <h1>{{ product.title }}</h1>
-    <p>{{ product.description }}</p>
-    <h4>{{ product.datetime_created }}</h4>
+    <div class="container mt-5" dir="rtl">
+        <div class="">
+            <div class="">
+                <div class="d-flex justify-content-center">
+                    <div class="row w-sm-75 w-100">
+                        <div class="col-xs-12 col-md-3 d-flex justify-content-center">
+                            <div>
+                                {% if book.cover %}
+                                    <img src="{{ products.cover.url }}"
+                                         class="img-fluid rounded-start" alt="...">
+                                {% endif %}
 
-{% endblock %}
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-md-6 text-center text-md-end mt-md-1 mt-4">
+                            <h1>{{ products.title }}</h1>
+                            <h5 class="small my-1"><span class="text-muted">نویسنده: </span>{{ products.author }}</h5>
+                            <h5 class="small my-1"><span class="text-muted">ایجاد کننده: </span>{{ products.user.username }}
+                            </h5>
+                            <h5 class="small my-1"><span class="text-muted">مترجم: </span>آرین</h5>
+                            <h5 class="small my-1"><span class="text-muted">انتشارات: </span>موز فروش</h5>
+                            {% if products.user == user %}
+                                <a href="{% url 'product_update' book.id %}">ویرایش</a>
+                                <span> | </span>
+                                <a href="{% url 'post_delete' book.id %}">حذف</a>
+                            {% endif %}
+
+                        </div>
+                        <div class="col-xs-12 col-md-3 d-flex flex-column">
+                            <h3 class="align-self-center pt-2 text-muted align-self-md-end">
+                                ${{ products.price }}
+                            </h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                    <div class="my-3 p-5 w-sm-75 w-100">
+                        {{ products.description|linebreaks }}
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                    <div class="card shadow my-3 p-5 w-sm-75 w-100">
+                        <h2 class="mb-5">نظرات:</h2>
+                        {% for comment in comments %}
+                            {% if comment.is_active %}
+                                <div class="border-bottom mb-3">
+                                    <h5 class="mb-3">{{ comment.user.username }}</h5>
+                                    {% if comment.recommend %}
+                                        <p>این کتاب را توسیه میکنم</p>
+                                    {% else %}
+                                        <p>این کتاب توسیه نمیکنم</p>
+                                    {% endif %}
+                                    <p>{{ comment.text|linebreaks }}</p>
+                                </div>
+                            {% endif %}
+
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                    <div class="card shadow my-3 p-5 w-sm-75 w-100">
+                        <h3>نظر خود را وارد کنید:</h3>
+                        <form method="POST">
+                            {% csrf_token %}
+                            {{ comment_form|crispy }}
+                            <button type="submit" class="btn btn-primary mt-3">ارسال</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+{% endblock content %}
