--- a/shop/templates/shop/product_update.html
+++ b/shop/templates/shop/product_update.html
@@ -1,15 +1,41 @@
-{% extends "_base.html" %}
+{% extends '_base.html' %}
+
+{% load crispy_forms_tags %}
 
 {% block title %}
-    Update {{ product.title }}
+    ویرایش کتاب{{ products.title }}
 {% endblock %}
 
 {% block content %}
+    <div class="container mt-4" dir="rtl">
+        <div class="row">
+            <div class="col-9">
+                <div class="card shadow my-3">
+                    <h5 class="card-header bg-success text-light px-5">فرم</h5>
+                    <div class="px-5 pt-3 pb-5">
+                        <form action="" method="POST" enctype="multipart/form-data">  {# framosh nashe braie daryaft aks #}
+                            {% csrf_token %}
+                            {{ form|crispy }}
+                            <button type="submit" class="btn btn-success mt-2">ذخیره</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-3">
 
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Change</button>
-    </form>
+                <div class="card my-3 shadow">
+                    <h5 class="card-header bg-warning text-light">راهنما</h5>
+                    <div class="card-body">
+                        <p class="card-text">
+                            اطلاعات کتاب را در فرم این صفحه وارد کنید و سپس بر روی دکمه ذخیره کلیک کنید.
+                        </p>
+                    </div>
+                </div>
 
-{% endblock %}
+            </div>
+        </div>
+    </div>
+        <button type="submit" class="btn btn-primary">ذخیره</button>
+    <br>
+    <a href="{% url 'product_list' %}">برگشت</a>
+{% endblock content %}
