--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,15 +1,42 @@
 {% extends '_base.html' %}
 
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block title %}
-    LogIn
+    Log In
+{% endblock %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
 {% block content %}
-    <form action="" method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit">Log In</button>
-    </form>
+    <div class="d-flex justify-content-center mt-5" dir="rtl">
+        <div class="col-xl-3 col-lg-4 col-md-5 col-sm-5 col-xs-6 bg-white m-3 m-sm-5 border rounded px-4 pt-4 pb-3 shadow">
+            <form method="post">
+                {% csrf_token %}
+                <h1 class="text-center">ورود</h1>
+                {{ form|crispy }}
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="mt-2">
+                        <a class="text-decoration-none" href="{% url 'account_reset_password' %}">فراموشی رمز عبور</a>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-success mt-3 w-100">ورود</button>
+                <div class="line-with-middle-sep">
+                  <span>
+                    یا
+                  </span>
+                </div>
+                <a href="{% url 'account_signup' %}" class="btn btn-primary mt-2 mb-3 w-100">ثبت نام</a>
+
+                <button class="btn btn-success mt-3" href type="submit">Log In</button>
+            </form>
+        </div>
+
+    </div>
+{#    <p><a class="btn btn-primary mt-3" href="{% url 'password_reset' %}" role="button">Forgot Pass</a>|<a#}
+{#            class="btn btn-primary mt-3" href="{% url 'signup' %}" role="button">Sign Up</a>#}
+{#    </p>#}
 {% endblock %}
