--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,7 +10,8 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit">Sign Up</button>
+        <button class="btn btn-success mt-3" type="submit">Sign Up</button>
 
     </form>
+    <a class="btn btn-primary mt-3" href="{% url 'account_login' %}" role="button">Log In</a>
 {% endblock %}
