--- a/blogs/templates/blog/post_delete.html
+++ b/blogs/templates/blog/post_delete.html
@@ -1,1 +1,16 @@
-delete
+{% extends '_base.html' %}
+
+{% block title %}
+    حذف کتاب{{ products.title }}
+{% endblock %}
+
+{% block content %}
+    <form action="" method="post">
+        {% csrf_token %}
+        <h1>حذف کتاب {{ products.title }}</h1>
+        <p>آیا از حذف کردن کتاب {{ products.title }} مطمين هستید؟</p>
+        <input type="submit" class="btn btn-danger" value="بله مطمينم">
+    </form>
+    <br>
+    <a href="{% url 'product_list' %}">برگشت</a>
+{% endblock content %}
