--- a/templates/_base.html
+++ b/templates/_base.html
@@ -24,25 +24,27 @@
             <img src="{% static 'icons/book.png' %}" alt="" height="30"
                  class="d-inline-block align-text-top">
         </a>
-        <a class="navbar-brand mx-3" href="#">کتاب یار</a>
+        <a class="navbar-brand mx-3" href="#">پوو</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="{% url 'product_list' %}">خانه</a>
-                <a class="nav-link" href="{% url 'product_create' %}">اضافه کردن کتاب</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">خانه</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'product_list' %}">فروشگاه</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'post_list' %}">وبلاگ</a>
             </div>
         </div>
         {% if user.is_authenticated %}
-                <div class="mx-2 text-white">خوش آمدی {{ user.username }} | <a class="link-light text-decoration-none" href="{% url 'account_logout' %}">خروج</a>
+            <div class="mx-2 text-white">خوش آمدی {{ user.username }} |
+            <a class="link-light text-decoration-none" href="{% url 'account_logout' %}">خروج</a>
 
         {% else %}
             <a href="{% url 'account_login' %}">ورود</a>
             <span> یا </span>
             <a href="{% url 'account_signup' %}">ثبت نام</a>
-        {% endif %} 
+        {% endif %}
         </div>
     </div>
 </nav>
